# Dossier-agentic-product-planner-builder

./: .claude.json  .env.example  .gitignore  .npmrc  .path  DUAL_LLM_INTEGRATION_STRATEGY.md  LICENSE  README.md  STEP_2_COMPLETION.md  STEP_2_IMPLEMENTATION.md  STEP_2_VERIFICATION.md  SUPABASE_SETUP.md  THIRD-PARTY-NOTICES.md  docs-index.yaml  eslint.config.mjs  forge.config.js  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.cursor/: hooks.json
.husky/: pre-commit
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: error-boundary.tsx
docs/: API_ENDPOINTS.md  DUPLICATE_CODE_REPORT.md  README.md  REMAINING_WORK_PLAN.md  SECTION_4_MEMORY_COORDINATION_PROMPT.md  SYSTEM_ARCHITECTURE.md  TEST_FAILURES_FIX_PLAN.md  agentic-flow-install-notes.md  agentic-flow-programmatic-api-issue.md  development-reference.md  docs-index.yaml  testing-reference.md
electron/: main.ts  preload.ts  runtime.ts  tsconfig.json  window-lifecycle.ts
examples/: MOCK_TASK_SUMMARY.md  QUICK_REFERENCE.md  README-mock-tasks.md  generate-mock-task.ts  mock-task-example.ts  (+2 more)
wyr/wyr-app/: Cargo.toml  tauri.conf.json
wyr/wyr-app/capabilities/: default.json
wyr/wyr-app/frontend/: index.html
wyr/wyr-app/src/: commands.rs  dossier_db.rs  lib.rs  main.rs  rvf_inspector.rs  schema.sql
wyr/wyr-core/: Cargo.toml
wyr/wyr-core/src/: engine.rs  lib.rs  preference.rs  question.rs
wyr/wyr-ruvector/: Cargo.toml
wyr/wyr-ruvector/src/: hnsw.rs  lib.rs  similarity.rs  vector.rs
(+455 files in other folders)
