[package]
name = "wyr-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dossier Desktop: AI-native product planner + WYR game + RVF inspector in a single Tauri binary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wyr-core = { path = "../wyr-core" }
wyr-ruvector = { path = "../wyr-ruvector" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[lib]
name = "wyr_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]
