[package]
name = "wyr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WYR game engine: question generation, preference modeling, scoring"

[dependencies]
wyr-ruvector = { path = "../wyr-ruvector" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
